<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bts.exersize01.ExerciseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_hello"
        android:text="@string/text_hello"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_temperature"
        android:text="@string/text_temperature"
        android:layout_alignBaseline="@+id/button_choice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_hello"
        android:layout_toRightOf="@+id/text_temperature"
        android:id="@+id/button_choice"
        android:textOn="@string/text_buttonOffCold"
        android:textOff="@string/text_buttonOnHot"
        android:checked="true"
        android:minWidth="100dp" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_choice"
        android:layout_alignLeft="@id/text_hello"
        android:text="@string/text_checkbox_milk"
        android:id="@+id/checkbox_milk"
        android:checked="true"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_sugar"
        android:layout_below="@id/checkbox_milk"
        android:layout_alignLeft="@id/checkbox_milk"
        android:text="@string/text_checkbox_sugar"
        android:checked="true"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_sugar"
        android:layout_alignLeft="@id/checkbox_milk"
        android:text="@string/text_checkbox_lemon"
        android:checked="false"/>

</RelativeLayout>
